# rust-project

./: .env  .gitignore  Cargo.toml
demo/jieba_demo/: Cargo.toml
demo/jieba_demo/src/: main.rs
project/hw-unisearch-cli/: Cargo.toml
project/hw-unisearch-core/: Cargo.toml  README.md
project/hw-unisearch-core-serve/: Cargo.toml  README.md
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/login/src/: main.rs
session1/login_manager/: Cargo.toml
session1/login_manager/src/: main.rs
session1/variables/src/: main.rs
session2/affinity/src/: main.rs
session2/atomic/src/: main.rs
session2/channels1/src/: main.rs
session2/dashing/src/: main.rs
session2/deadlocks/src/: main.rs
session2/dividing_work/: Cargo.toml
session2/dividing_work/src/: main.rs
session2/hello/src/: main.rs
session2/mutexes/src/: main.rs
session2/parking/src/: main.rs
session2/rayon_iters/src/: main.rs
session2/rayon_scopes/src/: main.rs
session2/rwlocks/src/: main.rs
session2/scoped_threads/src/: main.rs
session2/thread_builder/src/: main.rs
session2/tprio/: Cargo.toml
session2/tprio/src/: main.rs
session2/workers/src/: main.rs
session2/workers2/: Cargo.toml
session2/workers2/src/: main.rs
session3/blocking/: Cargo.toml
session3/blocking/src/: main.rs
session3/channels/: Cargo.toml
session3/channels/src/: main.rs
session3/errors/: Cargo.toml
session3/errors/src/: main.rs
session3/fileio/: Cargo.toml  warandpeace.txt
session3/fileio/src/: main.rs
session3/hello_async/src/: main.rs
session3/hello_tokio/: Cargo.toml
session3/hello_tokio/src/: main.rs
session3/recursion/: Cargo.toml
session3/restclient/: Cargo.toml
session3/tcpserver/: Cargo.toml
session3/tokio_select/: Cargo.toml
session3/tokio_testing/: Cargo.toml
session4/bytes/: Cargo.toml
session4/cycles/: Cargo.toml
session4/cycles_weak/: Cargo.toml
session4/db/: Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
session4/db/migrations/: 20240724135004_initial.sql  20240724145421_more_messages.sql
session4/db/src/: main.rs
session4/logspan/: Cargo.toml
session4/refc/: Cargo.toml
session4/thumbs/: Cargo.toml
session4/thumbs/migrations/: 20240726133935_initial.sql  20240726142640_insert_data.sql
session4/thumbs/src/: main.rs
session4/web_service/: Cargo.toml
session5/env_demo/: Cargo.toml
session5/minimal_server/: Cargo.toml
session5/minimal_server/src/: main.rs
session5/shared_data/: Cargo.toml
src/: main.rs
web/: demo.html
(+18 files in other folders)
