[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
authentication = { path = "./session1/authentication" }

[workspace]
members = [
    "session1/authentication",
    "session1/hello_world",
    "session1/login",
    "session1/login_manager",
    "session1/variables",
    "session2/affinity",
    "session2/atomic",
    "session2/channels1",
    "session2/dashing",
    "session2/deadlocks",
    "session2/dividing_work",
    "session2/hello",
    "session2/mutexes",
    "session2/parking", "session2/rayon_iters", "session2/rayon_scopes",
    "session2/rwlocks",
    "session2/scoped_threads",
    "session2/thread_builder", "session2/tprio",
    "session2/workers",
    "session2/workers2", "session3/blocking", "session3/errors", "session3/fileio", "session3/hello_async", "session3/hello_tokio", "session3/restclient", "session3/tcpserver", "session3/tokio_testing",
]
