[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
futures = "0.3.30"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.39.1", features = ["full"] }
