[package]
name = "thumbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.30"
image = "0.25.2"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
